# beatsync-core

./: BEATSYNC_PROJECT_SUMMARY.md  E2E_TEST_REPORT_2026-03-11.md  FINAL_E2E_TEST_REPORT.md  README.md  TROUBLESHOOTING_SUMMARY_AND_ACTION_PLAN.md  e2e_test_runner.py  live_deployment_tests.py  package-lock.json  package.json  render.yaml  response.json  response_midi.json  response_proxy.json  setup.sh  test_api_upload.py  test_local_api.py
beatsync-blender-visual/: README.md  pyproject.toml
beatsync-blender-visual/addon/beatsync_blender_visual/: __init__.py  bl_info.py  importer.py  ops_cleanup.py  ops_drivers.py  ops_import.py  ops_markers.py  register.py  ui_panel.py
beatsync-blender-visual/fixtures/: beatsync_test_markers.json
beatsync-blender-visual/scripts/: run_blender_tests.ps1  smoke_blender.py  smoke_blender_regression.py
beatsync-blender-visual/src/beatsync_blender_visual_core/: __init__.py  data_loader.py  driver_builder.py  driver_expr.py  drivers.py  mapping.py  naming.py  timeline.py  validate.py
beatsync-blender-visual/src/beatsync_blender_visual_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
beatsync-blender-visual/tests/: conftest.py  test_addon_registration.py  test_data_loader.py  test_driver_builder.py  test_driver_expr.py  test_drivers.py  test_mapping.py  test_naming.py  test_timeline.py  test_validate.py
beatsync-core/: README.md  pyproject.toml
beatsync-core/expected/: click_120.beatsync.json  midi_basic_100.beatsync.json
beatsync-core/schema/: v0_1.json
beatsync-core/scripts/: make_midi_basic_100.py
beatsync-core/src/beatsync_core/: __init__.py  cli.py
beatsync-core/src/beatsync_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
beatsync-core/src/beatsync_core/core/: audio.py  energy.py  key.py  midi.py  structure.py  tempo.py
beatsync-core/src/beatsync_core/utils/: validate.py
beatsync-core/tests/: test_cli_smoke.py  test_contract_schema.py  test_determinism.py  test_failures.py  test_golden_regression.py  test_key.py  test_structure.py  tolerances.py
beatsync-midi/: LICENSE  README.md  pyproject.toml
beatsync-midi/fixtures/: midi_basic_100.mid
beatsync-midi/fixtures/batch/: valid1.mid  valid2.mid
beatsync-midi/fixtures/golden/: valid1.mid  valid1.mid.report.json  valid2.mid  valid2.mid.report.json
beatsync-midi/scripts/: generate_goldens.py  make_golden.py  make_midi_basic_100.py  make_valid1.py  make_valid2.py
beatsync-midi/src/beatsync_midi/: __init__.py  cli.py  key_detect.py
beatsync-midi/src/beatsync_midi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
beatsync-midi/tests/: test_batch.py  test_bpm_normalization.py  test_cli_smoke.py  test_golden_regression.py  test_midi_key.py  test_transpose.py
beatsync-studio/: .gitignore  Procfile  SLICE_4_1.md  pyproject.toml  render.yaml  requirements.txt
beatsync-studio/beatsync_studio/: __init__.py  main.py
beatsync-studio/beatsync_studio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
beatsync-studio/frontend/: index.html  main.js  styles.css  timeline.js
beatsync-studio/frontend/fixtures/: golden_beatsync.json
beatsync-studio/storage/sha256-afd3c5105799fd092fb1d72ef48f27aef54fb1f9b89a1e39f0596fe643c0d53d/: beatsync.json
beatsync-studio/tests/: test_api_analysis.py
beatsync-studio/tests_playwright/: timeline.spec.ts
beatsync-ui/: .gitignore  COMPLETION.md  DEVELOPMENT.md  README.md  VERIFICATION.md  index.html  package-lock.json  package.json  vercel.json  vite.config.js
beatsync-ui/src/: App.jsx
beatsync-ui/src/api/: beatsync.js
beatsync-ui/src/components/: AnalysisResult.jsx  BeatTimeline.jsx  ErrorBoundary.jsx  ExportPanel.jsx  SectionMap.jsx  (+2 more)
src/: __init__.py  cli.py  midi_processor.py
tests/: example_output.json  schema_v0_1.json  test_cli.py  test_determinism.py  test_failure.py  test_golden.py  test_schema.py  tolerances.py
(+2 files in other folders)
