[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "beatsync_blender_visual_core"
version = "0.1.0"
description = "Core logic for BeatSync Blender Visual (pure Python, no bpy)"
authors = [
    { name="PlumbMonkey" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
