[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "beatsync_core"
version = "0.1.0"
description = "BeatSync Core: Deterministic music analysis engine."
authors = [
    { name = "BeatSync Team" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
beatsync = "beatsync_core.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
