[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "beatsync_core"
version = "0.1.0"
description = "BeatSync Core: Deterministic music analysis engine."
authors = [
    { name = "BeatSync Team" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "librosa>=0.10.1",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "soundfile>=0.12.1",
    "jsonschema>=4.21.0",
]

[project.scripts]
beatsync = "beatsync_core.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
