[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "beatsync_midi"
version = "0.1.0"
description = "BeatSync MIDI: Batch MIDI processing and normalization."
authors = [
    { name = "BeatSync Team" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mido>=1.3.0",
    "numpy>=1.26.0",
    "jsonschema>=4.21.0",
]

[project.scripts]
beatsync-midi = "beatsync_midi.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
