[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "beatsync_studio"
version = "0.1.0"
description = "BeatSync Studio: Web UI and orchestration for audio analysis."
authors = [
    { name = "Plumbmonkey Media" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
    "jsonschema>=4.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.26.0",
    "pytest-playwright>=0.4.3",
]

[tool.setuptools.packages.find]
where = [""]

[[tool.setuptools.py-modules]]
name = "beatsync_studio"
